# pypi2pkgbuild

./: .coveragerc  .gitattributes  .gitignore  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  TODO  TODO.md  TODO.rst  _pypi2pkgbuild_version.py  py38pi2pkgbuild.py  pypi2pkgbuild-compare.sh  pypi2pkgbuild.py  pyproject.toml  setup.cfg  setup.py  test_pypi2pkgbuild.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml
lib/: .gitignore
pkgbuild-extras/: jupyter-widgetsnbextension.PKGBUILD_EXTRAS  python-cairo.PKGBUILD_EXTRAS  python-gobject.PKGBUILD_EXTRAS  python-graphviz.PKGBUILD_EXTRAS  python-hmmlearn.PKGBUILD_EXTRAS  python-memory_profiler.PKGBUILD_EXTRAS  python-pillow.PKGBUILD_EXTRAS  python-plotly.PKGBUILD_EXTRAS  python-pomegranate.PKGBUILD_EXTRAS  python-pylibftdi.PKGBUILD_EXTRAS  python-scikit-image.PKGBUILD_EXTRAS  python-sphinx-gallery.PKGBUILD_EXTRAS  python-supersmoother.PKGBUILD_EXTRAS  python-tqdm.PKGBUILD_EXTRAS  python-vapory.PKGBUILD_EXTRAS  python-wxpython.PKGBUILD_EXTRAS  python-yep.PKGBUILD_EXTRAS  sftpman-gtk.PKGBUILD_EXTRAS  sftpman.PKGBUILD_EXTRAS
