[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pypi2pkgbuild"
description = "A PyPI to PKGBUILD converter."
readme = "README.rst"
authors = [{name = "Antony Lee"}]
urls = {Repository = "https://github.com/anntzer/pypi2pkgbuild"}
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Software Distribution",
]
requires-python = ">=3.8"
dynamic = ["version"]

[tool.setuptools]
packages = []
script-files = ["pypi2pkgbuild.py"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
fallback_version = "0+unknown"

[tool.coverage.run]
branch = true
include = ["pypi2pkgbuild.py"]
